--- a/Resources/css/khet.css
+++ b/Resources/css/khet.css
@@ -8,18 +8,23 @@ html, body {
 #board {
     width: 400px;
     height: 320px;
+    background: #484d4e;
 }
 
 table,tr,td {
     border: none;
-    border-collapse: collapse;
     padding: 0;
     margin: 0;        
 }
 
 td {
-    width: 40px;
-    height: 40px;
+    width: 38px;
+    height: 38px;
+    border-top: 1px solid #3a3e3f;
+    border-left: 1px solid #3a3e3f;
+    
+    border-right: 1px solid #6f7778;
+    border-bottom: 1px solid #6f7778;
 }
 
 .p0 {
@@ -32,13 +37,20 @@ td {
 
 #pieces {
     position: absolute;
+    top: 1px;
+    left: 1px;
+}
+
+#laser {
+    position: absolute;
     top: 0;
     left: 0;
+    z-index: 1337;
 }
 
 #pieces > div {
-    width: 40px;
-    height: 40px;
+    width: 38px;
+    height: 38px;
     position: absolute;
 }
 
@@ -51,3 +63,10 @@ td {
 .p1.pharao { background-image: url(../pics/pharao1.png); }
 .p1.djed { background-image: url(../pics/djed1.png); }
 .p1.pyramid { background-image: url(../pics/pyramid1.png); }
+
+.ray {
+    width: 2px;
+    background: #0f0;
+    -webkit-transform-origin: 0 0;
+    position: absolute;
+}
