--- a/Resources/css/khet.css
+++ b/Resources/css/khet.css
@@ -25,19 +25,22 @@ td {
     
     border-right: 1px solid #6f7778;
     border-bottom: 1px solid #6f7778;
+    -webkit-border-radius: 3px;
+    /*background: -webkit-gradient(radial, 10 19, 19, 0 5, 5, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0)) );*/
+    -webkit-box-shadow: inset 1px 1px 4px rgba(32, 32, 32, 0.4);
 }
 
 .p0 {
-    background: #f00;
+    background: #ab1416;
 }
 
 .p1 {
-    background: #ccc;
+    background: #b0bbbf;
 }
 
 #pieces {
     position: absolute;
-    top: 1px;
+    top: 3px;
     left: 1px;
 }
 
@@ -49,16 +52,19 @@ td {
 }
 
 #pieces > div {
-    width: 38px;
-    height: 38px;
+    width: 36px;
+    height: 36px;
     position: absolute;
     -webkit-transition: -webkit-transform 0.4s ease-in-out;
+    -webkit-border-radius: 3px;
+    background-position: center center;
+    -webkit-box-shadow: 0px 0px 4px #000;
 }
+
 
 .dragging #pieces > div {
     -webkit-transition: none;
 }
-
 
 
 .p0.obelisk { background-image: url(../pics/obelisk0.png); }
@@ -74,9 +80,9 @@ td {
 .ray {
     width: 3px;
     background: #0f0;
-    -webkit-transform-origin: 0 0;
+    -webkit-transform-origin: 1px 1px;
     position: absolute;
-    -webkit-box-shadow: 0px 0px 4px #0f0;
+    -webkit-box-shadow: 0px 0px 4px #0f0, 0px 0px 8px #0f0;
 }
 
 #menu {
@@ -89,13 +95,14 @@ td {
 }
 
 .active {
-    -webkit-box-shadow: 0px 0px 4px #0f0;
+    -webkit-box-shadow: 0px 0px 8px #000;
     z-index: 1337;
+    opacity: 0.8;
 }
 
 .potential {
     background: #00f;
-    /*-webkit-box-shadow: 0px 0px 4px #00f;*/
+    -webkit-box-shadow: 0px 0px 4px #00f, inset 1px 1px 4px rgba(32, 32, 32, 0.4);
 }
 
 .at {
@@ -103,13 +110,39 @@ td {
 }
 
 .target {
-    opacity: 0.5;
-    width: 40px;
-    height: 40px;
-    background: #0f0;
     position: absolute;
 }
 
-.explode {
-    -webkit-transform: scale(4);
+.target div {
+    opacity: 0.8;
+    width: 40px;
+    height: 40px;
+    color: #0f0;
+    font-size: 40px;
+    text-align: center;
+    webkit-box-shadow: 0px 0px 2px #000;
+   -webkit-animation: rotateZ 1s linear 0s infinite normal;    
+}
+
+.target div:before {
+    content: "✴";
+}
+
+.hover {
+    border: 1px solid #0f0;
+}
+
+.disallowed {
+    border: 1px solid #f00;
+}
+
+@-webkit-keyframes rotateZ {
+    from { -webkit-transform: rotate(0deg) scale(1); } 
+    50% { -webkit-transform: rotate(180deg) scale(1.5); } 
+    to { -webkit-transform: rotate(360deg) scale(1); }
+}
+
+@-webkit-keyframes pulse {
+    from { -webkit-transform: scale(1); } 
+    to { -webkit-transform: scale(2); }
 }
