--- a/Resources/css/khet.css
+++ b/Resources/css/khet.css
@@ -3,6 +3,13 @@ html, body {
     height: 100%;
     padding: 0;
     margin: 0;
+    font-family: "Lucida Grande", Helvetica;
+}
+
+#wrapper {
+    width: 480px;
+    height: 320px;
+    overflow: hidden;
 }
 
 #board {
@@ -49,6 +56,7 @@ td {
     top: 0;
     left: 0;
     z-index: 1357;
+    -webkit-animation: pulse 2s linear 0s infinite normal;   
 }
 
 #pieces > div {
@@ -87,11 +95,20 @@ td {
 
 #menu {
     width: 80px;
-    height: 100%;
-    background: #f00;
+    height: 320px;
+    background: #222;
     position: absolute;
     top: 0px;
     left: 400px;
+    -webkit-box-shadow: 0px 0px 16px #000;
+    z-index: 2337;
+}
+
+#done {
+    color: #f00;
+    text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.2);
+    text-align: center;
+    padding: 10px;
 }
 
 .active {
@@ -143,6 +160,7 @@ td {
 }
 
 @-webkit-keyframes pulse {
-    from { -webkit-transform: scale(1); } 
-    to { -webkit-transform: scale(2); }
+    from { opacity: 1; }
+    50% { opacity: 0.7; } 
+    to { opacity: 1; }
 }
