--- a/Resources/css/ipad.css
+++ b/Resources/css/ipad.css
@@ -44,8 +44,8 @@ td {
 }
 
 .ray {
-    width: 6px;
-    -webkit-transform-origin: 3px 3px;
+    width: 4px;
+    -webkit-transform-origin: 2px 2px;
 }
 
 #menu {
@@ -64,7 +64,11 @@ td {
 }
 
 .potential {
-    -webkit-box-shadow: 0px 0px 4px #00f, inset 1px 1px 4px rgba(32, 32, 32, 0.4);
+   border: 2px solid #00f;
+}
+
+.at {
+    border: 2px solid #ff0;
 }
 
 .target div {
